--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ height: 100vh;
   justify-content: center;
   align-items: center;
 }
-a{
+.count{
     position: fixed;
     visibility: hidden;
 }
